# demo_eval_metric

./: .gitignore  .pyre_configuration  CLAUDE.md  README.md  YAML_PATTERNS.md  agents.md  pyproject.toml
.github/: README.md
.github/workflows/: docs.yml  test.yml
.pyre/: pyre.stderr
docs/: README.md  _metadata.yml  _quarto.yml  ard.qmd  coverage.qmd  data.py  data_generator.py  developer_notes.qmd  expression_validation.qmd  getting_started.qmd  index.qmd  metric.qmd  metric_define.qmd  metric_evaluator.qmd  metric_examples.qmd  metric_pivot.qmd  quickstart.qmd  styles.css
examples/: basic_usage.qmd  metric_factory_example.py
plan/: CLAUDE.md  YAML_PATTERNS.md  _quarto.yml  class_diagram.md  config_parser.py  data.py  evaluation_examples.qmd  evaluation_schema.yaml  example.py  examples.qmd  lazy_evaluator.py  metric.py  metric_compiler.py  metric_data.py  metric_evaluator.py  metric_examples.qmd  metric_factory.py  polar_expression.md  yaml_to_pl_lazy.py
src/polars_eval_metrics/: __init__.py  ard.py  config.py  data_prep.py  metric_compiler.py  metric_define.py  metric_evaluator.py  metric_helpers.py  metric_registry.py  pivot_utils.py  result_formatter.py  table_formatter.py  utils.py
src/polars_eval_metrics/core/: builtin.py  (+8 more)
tests/: conftest.py  test_ard.py  test_basic.py  test_enum_labels.py  test_enum_preservation_and_ordering.py  test_integration_quickstart.py  test_metric_define.py  test_metric_evaluator.py  test_metric_helpers.py  test_metric_registry.py  test_pivot_by_methods.py  test_quickstart_examples.py  test_subgroup_sorting.py  test_utils.py
(+4 files in other folders)
